stop overlap of text onto footer

--- a/src/assets/stylesheets/components/_site-link.scss
+++ b/src/assets/stylesheets/components/_site-link.scss
@@ -1,7 +1,7 @@
 .site-link {
   color: $white;
   margin: $gutter-large;
-  width: rem-calc(320); height: rem-calc(240);
+  width: rem-calc(320);
 
   &__title {
     font-size: rem-calc(40);
